Refactored LAN final automate (Ethernet2 lib update required)

--- a/platformio.ini
+++ b/platformio.ini
@@ -280,8 +280,8 @@ build_flags = !python get_build_flags.py due
 ; Need to place arduinoOTA utility from Arduino IDE distribution to folder in your PATH
 ;fix address and password
 ;upload_flags =
-upload_command = arduinoOTA -address 192.168.88.21 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
-upload_protocol = custom
+;upload_command = arduinoOTA -address 192.168.88.21 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
+;upload_protocol = custom
 lib_ignore =
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DHT sensor library for ESPx
@@ -331,7 +331,7 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 ;upload_port = net:192.168.88.31:23
-;upload_port = net:192.168.88.2:23000
+upload_port = net:192.168.88.2:23000
 framework = arduino
 build_flags = !python get_build_flags.py mega2560slim-5100
 lib_ignore =
@@ -453,7 +453,8 @@ lib_ignore =
     M5Stack
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-    https://github.com/anklimov/DS2482_OneWire
+    ;COMMENT/UNCOMMENT next line for software 1-wire driver  on/off
+    ;https://github.com/anklimov/DS2482_OneWire
     https://github.com/anklimov/ESP-Dmx
     ESP8266HTTPClient
     https://github.com/anklimov/aJson
@@ -578,7 +579,7 @@ platform = atmelsam
 framework = arduino
 board = due
 build_flags = !python get_build_flags.py lighthub21
-;upload_command = arduinoOTA -address 192.168.88.59 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
+;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
 ;upload_command = arduinoOTA -address 192.168.88.34 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
 ;upload_protocol = custom
 lib_ignore =
@@ -590,7 +591,7 @@ lib_ignore =
         WifiManager
         DmxSimple
         httpClient
-        Ethernet
+        Ethernet2
         Ethernet3
         Ethernet5100
         NRFFlashStorage
@@ -609,7 +610,8 @@ lib_deps =
         https://github.com/anklimov/aJson
         https://github.com/anklimov/CmdArduino
         https://github.com/anklimov/ModbusMaster
-        https://github.com/anklimov/Ethernet2
+        ;https://github.com/anklimov/Ethernet2
+        https://github.com/anklimov/Ethernet
         https://github.com/knolleary/pubsubclient.git
         https://github.com/anklimov/Artnet.git
         FastLED@3.3.2
@@ -720,3 +722,4 @@ lib_deps =
     https://github.com/anklimov/NRFFlashStorage
     Adafruit NeoPixel
     https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+    SPI
