(critical) Syslog memory corruption fixed LAN startup improved

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ src_dir = lighthub
 default_envs =
 ;   ****** UNCOMMENT single environment name for target platform below *******
 ; Arduino Mega (without onewire) + Ethernet shield Wiznet 5100
-;    mega2560slim-5100
+    mega2560slim-5100
 
 ; Arduino Mega + Ethernet shield Wiznet 5100
 ;    mega2560-5100
@@ -592,6 +592,7 @@ lib_ignore =
         DmxSimple
         httpClient
         Ethernet2
+        ;Ethernet
         Ethernet3
         Ethernet5100
         NRFFlashStorage
