Red blink on errors Some cleanup

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ src_dir = lighthub
 default_envs =
 ;   ****** UNCOMMENT single environment name for target platform below *******
 ; Arduino Mega (without onewire) + Ethernet shield Wiznet 5100
-    mega2560slim-5100
+;    mega2560slim-5100
 
 ; Arduino Mega + Ethernet shield Wiznet 5100
 ;    mega2560-5100
@@ -341,7 +341,7 @@ lib_ignore =
     DueFlashStorage
     WifiManager
     Ethernet3
-    Ethernet
+    Ethernet2
     HTTPClient
     NRFFlashStorage
     WebServer
@@ -357,7 +357,8 @@ lib_deps =
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
-    https://github.com/anklimov/Ethernet5100
+    https://github.com/anklimov/Ethernet
+    ;5100 lib have ~90 bytes less footprint of RAM
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED@3.3.2
