--- a/platformio.ini
+++ b/platformio.ini
@@ -23,13 +23,13 @@ default_envs =
 ;    mega2560-5500
 
 ; LightHub controller HW revision 2.1 and above (Wiznet 5500 CS on pin 53)
-;    lighthub21
+    lighthub21
 
 ; Arduino DUE  + Ethernet shield Wiznet 5100
 ;    due-5100
 
 ; Generic DUE
-     due
+;     due
 ; Arduino DUE + Ethernet shield Wiznet 5500
 ;   due-5500
 
@@ -581,8 +581,8 @@ framework = arduino
 board = due
 build_flags = !python get_build_flags.py lighthub21
 ;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
-;upload_command = arduinoOTA -address 192.168.88.34 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
-;upload_protocol = custom
+upload_command = arduinoOTA -address 192.168.88.28 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
+upload_protocol = custom
 lib_ignore =
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
         DHT sensor library for ESPx
