--- a/platformio.ini
+++ b/platformio.ini
@@ -23,13 +23,13 @@ default_envs =
 ;    mega2560-5500
 
 ; LightHub controller HW revision 2.1 and above (Wiznet 5500 CS on pin 53)
-;    lighthub21
+    lighthub21
 
 ; Arduino DUE  + Ethernet shield Wiznet 5100
 ;    due-5100
 
 ; Generic DUE
-     due
+;     due
 ; Arduino DUE + Ethernet shield Wiznet 5500
 ;   due-5500
 
@@ -56,6 +56,7 @@ default_envs =
 [env:nrf52840-5500]
 platform = nordicnrf52
 board = nrf52840_dk
+monitor_baud = 115200
 ;board_build.variant = breakout
 ;upload_protocol = mbed
 ;upload_port = /dev/cu.SLAB_USBtoUART
@@ -118,6 +119,7 @@ lib_deps =
 [env:m5stack]
 platform = espressif32
 board = m5stack-core-esp32
+monitor_baud = 115200
 framework = arduino
 upload_speed = 921600
 build_flags = !python get_build_flags.py m5stack
@@ -170,6 +172,7 @@ lib_deps =
 [env:esp32-wifi]
 platform = espressif32
 framework = arduino
+monitor_baud = 115200
 monitor_filters = esp32_exception_decoder
 build_type = debug
 ;board = pico32
@@ -227,6 +230,7 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
+monitor_baud = 115200
 build_flags = !python get_build_flags.py due-5100
 lib_ignore =
         ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
@@ -276,6 +280,7 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
+monitor_baud = 115200
 build_flags = !python get_build_flags.py due
 ; Need to place arduinoOTA utility from Arduino IDE distribution to folder in your PATH
 ;fix address and password
@@ -330,6 +335,7 @@ lib_deps =
 [env:mega2560slim-5100]
 platform = atmelavr
 board = megaatmega2560
+monitor_baud = 115200
 ;upload_port = net:192.168.88.31:23
 upload_port = net:192.168.88.2:23000
 framework = arduino
@@ -376,6 +382,7 @@ lib_deps =
 [env:mega2560-5500]
 platform = atmelavr
 board = megaatmega2560
+monitor_baud = 115200
 framework = arduino
 build_flags = !python get_build_flags.py mega2560-5500
 lib_ignore =
@@ -421,6 +428,7 @@ lib_deps =
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
+monitor_baud = 115200
 upload_protocol = esptool
 
 ;upload_protocol = espota
@@ -482,6 +490,7 @@ lib_deps =
 [env:mega2560-5100]
 platform = atmelavr
 board = megaatmega2560
+monitor_baud = 115200
 framework = arduino
 upload_port = net:192.168.88.2:23000
 build_flags = !python get_build_flags.py mega2560-5100
@@ -528,6 +537,7 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
+monitor_baud = 115200
 ;build_flags = !bash check_custom_build_flags_due-5500.sh
 build_flags = !python get_build_flags.py due-5500
 lib_ignore =
@@ -579,10 +589,11 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
+monitor_baud = 115200
 build_flags = !python get_build_flags.py lighthub21
 ;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
-upload_command = arduinoOTA -address 192.168.88.28 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
-upload_protocol = custom
+;upload_command = arduinoOTA -address 192.168.88.28 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
+;upload_protocol = custom
 lib_ignore =
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
         DHT sensor library for ESPx
@@ -634,6 +645,7 @@ lib_deps =
 [env:controllino]
 platform = atmelavr
 board = megaatmega2560
+monitor_baud = 115200
 framework = arduino
 build_flags = !python get_build_flags.py controllino
 lib_ignore =
@@ -680,6 +692,7 @@ lib_deps =
 platform = ststm32
 framework = arduino
 board = nucleo_f103rb
+monitor_baud = 115200
 upload_protocol = stlink
 debug_tool = stlink
 build_flags = !python get_build_flags.py stm32-enc2860
