--- a/platformio.ini
+++ b/platformio.ini
@@ -23,15 +23,15 @@ default_envs =
 ;    mega2560-5500
 
 ; LightHub controller HW revision 2.1 and above (Wiznet 5500 CS on pin 53)
-    lighthub21
+;    lighthub21
 
 ; Arduino DUE  + Ethernet shield Wiznet 5100
-    due-5100
+;    due-5100
 
 ; Generic DUE
-     due
+;     due
 ; Arduino DUE + Ethernet shield Wiznet 5500
-   due-5500
+;   due-5500
 
 ; ESP 8266
 ;    esp8266-wifi
