49days issue fixed, thermostates, RGB/HSV mixes

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ src_dir = lighthub
 default_envs = 
 ;   ****** UNCOMMENT single environment name for target platform below *******
 ; Arduino Mega (without onewire) + Ethernet shield Wiznet 5100
-;    mega2560slim-5100
+    mega2560slim-5100
 
 ; Arduino Mega + Ethernet shield Wiznet 5100
 ;    mega2560-5100
@@ -28,7 +28,7 @@ default_envs =
 ;    due-5100
 
 ; Generic DUE
-     due
+;     due
 ; Arduino DUE + Ethernet shield Wiznet 5500
 ;   due-5500
 
