--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ src_dir = lighthub
 default_envs = 
 ;   ****** UNCOMMENT single environment name for target platform below *******
 ; Arduino Mega (without onewire) + Ethernet shield Wiznet 5100
-    mega2560slim-5100
+;    mega2560slim-5100
 
 ; Arduino Mega + Ethernet shield Wiznet 5100
 ;    mega2560-5100
@@ -22,7 +22,7 @@ default_envs =
 ;    mega2560-5500
 
 ; LightHub controller HW revision 2.1 and above (Wiznet 5500 CS on pin 53)
-;	lighthub21
+	lighthub21
 
 ; Arduino DUE  + Ethernet shield Wiznet 5100
 ;    due-5100
@@ -583,8 +583,8 @@ framework = arduino
 board = due
 build_flags = !python get_build_flags.py lighthub21
 ;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
-;upload_command = arduinoOTA -address 192.168.88.34 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
-;upload_protocol = custom
+upload_command = arduinoOTA -address 192.168.88.64 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
+upload_protocol = custom
 lib_ignore = 
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
