Service Pack 1 PID, FLOAT and TENS types compatib.

--- a/platformio.ini
+++ b/platformio.ini
@@ -582,8 +582,8 @@ platform = atmelsam
 framework = arduino
 board = due
 build_flags = !python get_build_flags.py lighthub21
-;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
-upload_command = arduinoOTA -address 192.168.88.64 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
+;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 4
+upload_command = arduinoOTA -address 192.168.88.64 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 4
 upload_protocol = custom
 lib_ignore = 
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
