uartBridge refactored & cross-compiled. new Mega dev

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,15 @@
 src_dir = lighthub
 default_envs = 
 ;   ****** UNCOMMENT single environment name for target platform below *******
-; Arduino Mega (without onewire) + Ethernet shield Wiznet 5100
+
+; Arduino Mega compact build + Ethernet shield Wiznet 5100, 1-wire, thermostates.
+; Without DMX, Wiznet 5100 network driver
 ;    mega2560slim-5100
+
+; Another Arduino Mega compact build without 1-wire, DMX, but with OTA
+; OPTIBOOT bootloader required! https://github.com/MCUdude/MegaCore
+; universal Wiznet network driver
+;     mega2560slim2
 
 ; Arduino Mega + Ethernet shield Wiznet 5100
 ;    mega2560-5100
@@ -28,7 +35,7 @@ default_envs =
 ;    due-5100
 
 ; Generic DUE
-;     due
+;    due
 ; Arduino DUE + Ethernet shield Wiznet 5500
 ;   due-5500
 
@@ -173,7 +180,11 @@ monitor_filters = esp32_exception_decoder
 build_type = debug
 board = esp32-evb
 monitor_baud = 115200
-upload_speed = 115200
+;upload_speed = 115200
+;upload_command = arduinoOTA -address 192.168.88.60 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 5
+upload_command = arduinoOTA -address 192.168.11.230 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 5
+upload_protocol = custom
+
 build_flags = !python get_build_flags.py esp32-wifi
 lib_ignore = 
     ;COMMENT/UNCOMMENT next line for software 1-wire driver on/off
@@ -220,6 +231,7 @@ lib_deps =
 	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
+	
 monitor_speed = 115200
 
 [env:due-5100]
@@ -359,7 +371,7 @@ lib_deps =
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/anklimov/DMXSerial
-	https://github.com/anklimov/Ethernet
+	https://github.com/anklimov/Ethernet5100
     ;5100 lib have ~90 bytes less footprint of RAM
 	https://github.com/knolleary/pubsubclient.git
 	https://github.com/anklimov/Artnet.git
@@ -375,6 +387,67 @@ lib_deps =
 	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
 	br3ttb/PID@^1.2.1
 monitor_speed = 115200
+
+
+[env:mega2560slim2]
+platform = atmelavr
+;For OTA programming - generating bin image
+extra_scripts = post:toBin.py
+;OptiBoot setting
+board = ATmega2560
+;was megaatmega2560 for conventional bootloader
+; Clock frequency in [Hz]
+board_build.f_cpu = 16000000L
+
+; BUILD OPTIONS
+; Comment out to enable LTO (this line unflags it)
+;build_unflags = -flto -  not working without LTO!
+
+upload_protocol = arduino
+board_upload.speed = ${env:fuses_bootloader.board_bootloader.speed}
+framework = arduino
+build_flags = !python get_build_flags.py mega2560slim2
+lib_ignore = 
+    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
+	DHT sensor library for ESPx
+	DmxDue
+	DueFlashStorage
+	WifiManager
+	Ethernet3
+	Ethernet2
+	HTTPClient
+	NRFFlashStorage
+	WebServer
+	UIPEthernet
+	ESP_EEPROM
+	M5Stack
+lib_deps = 
+	https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+	https://github.com/anklimov/DS2482_OneWire
+	https://github.com/anklimov/DmxSimple
+	https://github.com/anklimov/httpClient
+	https://github.com/anklimov/aJson
+	https://github.com/anklimov/CmdArduino
+	https://github.com/anklimov/ModbusMaster
+	https://github.com/anklimov/DMXSerial
+	;https://github.com/anklimov/Ethernet5100
+    ;5100 lib have ~90 bytes less footprint of RAM
+	https://github.com/anklimov/Ethernet.git
+	https://github.com/knolleary/pubsubclient.git
+	;https://github.com/anklimov/Artnet.git
+	FastLED@3.3.2
+	Adafruit Unified Sensor
+	DHT sensor library
+	https://github.com/arcao/Syslog.git
+	Streaming
+	ClosedCube HDC1080
+	SparkFun CCS811 Arduino Library@~1.0.7
+	Adafruit NeoPixel
+	https://github.com/anklimov/ArduinoOTA
+	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	br3ttb/PID@^1.2.1
+monitor_speed = 115200
+
 
 [env:mega2560-5500]
 platform = atmelavr
@@ -591,8 +664,8 @@ board = due
 monitor_baud = 115200
 build_flags = !python get_build_flags.py lighthub21
 ;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 4
-upload_command = arduinoOTA -address 192.168.88.64 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 4
-upload_protocol = custom
+;upload_command = arduinoOTA -address 192.168.88.45 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 4
+;upload_protocol = custom
 lib_ignore = 
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
@@ -738,3 +811,39 @@ lib_deps =
 	SPI
 	br3ttb/PID@^1.2.1
 monitor_speed = 115200
+
+; Run the following command to upload with this environment
+; pio run -e Upload_ISP -t upload
+[env:Upload_ISP]
+platform = atmelavr
+framework = arduino
+; Custom upload procedure
+upload_protocol = custom
+; Avrdude upload flags
+upload_flags =
+  -C$PROJECT_PACKAGES_DIR/tool-avrdude/avrdude.conf
+  -p$BOARD_MCU
+  -PUSB
+  -cusbasp
+; Avrdude upload command
+upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+
+
+; Run the following command to set fuses
+; pio run -e fuses_bootloader -t fuses
+; Run the following command to set fuses + burn bootloader
+; pio run -e fuses_bootloader -t bootloader
+[env:fuses_bootloader]
+platform = atmelavr
+framework = arduino
+board_hardware.oscillator = external ; Oscillator type
+board_hardware.uart = uart0          ; Set UART to use for serial upload
+board_bootloader.speed = 115200      ; Set bootloader baud rate
+board_hardware.bod = 2.7v            ; Set brown-out detection
+board_hardware.eesave = yes          ; Preserve EEPROM when uploading using programmer
+upload_protocol = usbasp             ; Use the USBasp as programmer
+upload_flags =                       ; Select USB as upload port and divide the SPI clock by 8
+  -PUSB
+  -B8
+
+;; End of OPTIBOOT stuff
