EEPROM refactoring& http API. Mega&due tested

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ default_envs =
 ; Another Arduino Mega compact build without 1-wire, DMX, but with OTA
 ; OPTIBOOT bootloader required! https://github.com/MCUdude/MegaCore
 ; universal Wiznet network driver
-;     mega2560slim2
+;    mega2560slim2
 
 ; Arduino Mega + Ethernet shield Wiznet 5100
 ;    mega2560-5100
@@ -54,12 +54,12 @@ default_envs =
 ; STM32 board + ENC28j60 network
 ;    stm32-enc2860
 
-; NRF52 board + Wiznet 5500 network
-;    nrf52840-5500
+; NRF52 board + Wiznet 5x00 network
+;   nrf52840
 
 ;build_dir = /tmp/pioenvs
 ;libdeps_dir = /tmp/piolibdeps
-[env:nrf52840-5500]
+[env:nrf52840]
 platform = nordicnrf52
 board = nrf52840_dk
 monitor_baud = 115200
@@ -67,7 +67,7 @@ monitor_baud = 115200
 ;upload_protocol = mbed
 ;upload_port = /dev/cu.SLAB_USBtoUART
 framework = arduino
-build_flags = !python get_build_flags.py nrf52840-5500
+build_flags = !python get_build_flags.py nrf52840
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	ESP_EEPROM
@@ -78,7 +78,7 @@ lib_ignore =
 	SD
 	SdFat
 	WifiManager
-	Ethernet
+	Ethernet2
 	Ethernet3
 	Ethernet5100
 	httpClient
@@ -99,7 +99,7 @@ lib_ignore =
 lib_deps = 
 	https://github.com/anklimov/Arduino-Temperature-Control-Library.git
 	https://github.com/anklimov/DS2482_OneWire
-	https://github.com/anklimov/Ethernet2
+	https://github.com/anklimov/Ethernet
 	ArduinoHttpClient
 	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
@@ -113,9 +113,11 @@ lib_deps =
 	https://github.com/anklimov/NRFFlashStorage
 	https://github.com/adafruit/Adafruit_NeoPixel.git
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
+	;ArduinoMDNS
 monitor_speed = 115200
 
 [env:m5stack]
@@ -153,7 +155,7 @@ lib_deps =
 	https://github.com/knolleary/pubsubclient.git
 	Streaming
     ;ESP_EEPROM
-	https://github.com/anklimov/NRFFlashStorage
+	;https://github.com/anklimov/NRFFlashStorage
 	Adafruit Unified Sensor
 	DHT sensor library for ESPx
 	https://github.com/anklimov/Artnet.git
@@ -168,9 +170,11 @@ lib_deps =
 	M5Stack
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 [env:esp32-wifi]
@@ -182,8 +186,8 @@ board = esp32-evb
 monitor_baud = 115200
 ;upload_speed = 115200
 ;upload_command = arduinoOTA -address 192.168.88.60 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 5
-upload_command = arduinoOTA -address 192.168.11.230 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 5
-upload_protocol = custom
+;upload_command = arduinoOTA -address 192.168.11.230 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 5
+;upload_protocol = custom
 
 build_flags = !python get_build_flags.py esp32-wifi
 lib_ignore = 
@@ -215,7 +219,7 @@ lib_deps =
 	https://github.com/knolleary/pubsubclient.git
 	Streaming
     ;ESP_EEPROM
-	https://github.com/anklimov/NRFFlashStorage
+	;https://github.com/anklimov/NRFFlashStorage
 	Adafruit Unified Sensor
 	DHT sensor library for ESPx
 	https://github.com/anklimov/Artnet.git
@@ -228,9 +232,11 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 	
 monitor_speed = 115200
 
@@ -280,8 +286,10 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 [env:due]
@@ -338,8 +346,10 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 [env:mega2560slim-5100]
@@ -384,8 +394,10 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 
@@ -403,7 +415,10 @@ board_build.f_cpu = 16000000L
 ; Comment out to enable LTO (this line unflags it)
 ;build_unflags = -flto -  not working without LTO!
 
-upload_protocol = arduino
+;upload_protocol = arduino
+upload_command = arduinoOTA -address 192.168.11.213 -port 65280 -username arduino -password password -b -upload /sketch -sketch $BUILD_DIR/${PROGNAME}.bin;sleep 5
+upload_protocol = custom
+
 board_upload.speed = ${env:fuses_bootloader.board_bootloader.speed}
 framework = arduino
 build_flags = !python get_build_flags.py mega2560slim2
@@ -444,8 +459,10 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 
@@ -491,8 +508,10 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 [env:esp8266-wifi]
@@ -554,8 +573,10 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA.git
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
+	;ArduinoMDNS
 monitor_speed = 115200
 
 [env:mega2560-5100]
@@ -602,8 +623,10 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 [env:due-5500]
@@ -653,8 +676,10 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 [env:lighthub21]
@@ -663,8 +688,8 @@ framework = arduino
 board = due
 monitor_baud = 115200
 build_flags = !python get_build_flags.py lighthub21
-;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 4
-;upload_command = arduinoOTA -address 192.168.88.45 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 4
+;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
+;upload_command = arduinoOTA -address 192.168.88.45 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 6
 ;upload_protocol = custom
 lib_ignore = 
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
@@ -708,8 +733,10 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 [env:controllino]
@@ -754,9 +781,11 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 [env:stm32-enc2860]
@@ -807,9 +836,11 @@ lib_deps =
 	UIPEthernet
 	https://github.com/anklimov/NRFFlashStorage
 	Adafruit NeoPixel
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	SPI
 	br3ttb/PID@^1.2.1
+	ArduinoMDNS
 monitor_speed = 115200
 
 ; Run the following command to upload with this environment
