--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ custom-build-flags/build_flags_nrf52840
 .vscode/.browse.c_cpp.db
 .vscode/c_cpp_properties.json
 .vscode/launch.json
+lighthub/modules/out_elevator.cpp
+lighthub/modules/out_elevator.h
+spare_files/*
