input pulling on HW Timer (DUE)

--- a/platformio.ini
+++ b/platformio.ini
@@ -117,7 +117,8 @@ lib_deps =
 	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
-	;ArduinoMDNS
+	TimerInterrupt_Generic
+
 monitor_speed = 115200
 
 [env:m5stack]
@@ -175,6 +176,8 @@ lib_deps =
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 [env:esp32-wifi]
@@ -237,7 +240,8 @@ lib_deps =
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
-	
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 [env:due-5100]
@@ -290,6 +294,8 @@ lib_deps =
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 [env:due]
@@ -350,6 +356,7 @@ lib_deps =
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 monitor_speed = 115200
 
 [env:mega2560slim-5100]
@@ -398,6 +405,8 @@ lib_deps =
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 
@@ -463,6 +472,8 @@ lib_deps =
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 
@@ -512,6 +523,8 @@ lib_deps =
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 [env:esp8266-wifi]
@@ -550,6 +563,8 @@ lib_ignore =
 	UIPEthernet
 	EEPROM
 	M5Stack
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 lib_deps = 
 	https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     ;COMMENT/UNCOMMENT next line for software 1-wire driver  on/off
@@ -627,6 +642,8 @@ lib_deps =
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 [env:due-5500]
@@ -680,6 +697,8 @@ lib_deps =
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 [env:lighthub21]
@@ -737,6 +756,8 @@ lib_deps =
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 [env:controllino]
@@ -786,6 +807,8 @@ lib_deps =
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 [env:stm32-enc2860]
@@ -841,6 +864,8 @@ lib_deps =
 	SPI
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
 monitor_speed = 115200
 
 ; Run the following command to upload with this environment
