input handle improved, +stm env -2due envs

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,13 +31,8 @@ default_envs =
 ; LightHub controller HW revision 2.1 and above (Wiznet 5500 CS on pin 53)
 ;	lighthub21
 
-; Arduino DUE  + Ethernet shield Wiznet 5100
-;    due-5100
-
-; Generic DUE
+; Generic DUE (working with Wiznet 5X00 network)
 ;    due
-; Arduino DUE + Ethernet shield Wiznet 5500
-;   due-5500
 
 ; ESP 8266
 ;    esp8266-wifi
@@ -53,6 +48,9 @@ default_envs =
 
 ; STM32 board + ENC28j60 network
 ;    stm32-enc2860
+
+; STM32 board (olmexino) with WIZNET 5X00 network
+;    stm32
 
 ; NRF52 board + Wiznet 5x00 network
 ;   nrf52840
@@ -244,59 +242,7 @@ lib_deps =
 
 monitor_speed = 115200
 
-[env:due-5100]
-platform = atmelsam
-framework = arduino
-board = due
-monitor_baud = 115200
-build_flags = !python get_build_flags.py due-5100
-lib_ignore = 
-        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
-	DHT sensor library for ESPx
-	ESP_EEPROM
-	DMXSerial
-	DmxSimple
-	httpClient
-	ESPDMX
-	ESP-Dmx
-	WifiManager
-	Ethernet3
-	NRFFlashStorage
-	WebServer
-	UIPEthernet
-	EEPROM
-	M5Stack
-        ;ArduinoOTA
-lib_deps = 
-	https://github.com/sebnil/DueFlashStorage
-	https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-	https://github.com/anklimov/DS2482_OneWire
-	https://github.com/anklimov/DmxDue
-	ArduinoHttpClient
-	https://github.com/anklimov/aJson
-	https://github.com/anklimov/CmdArduino
-	https://github.com/anklimov/ModbusMaster
-	https://github.com/anklimov/Ethernet5100
-	https://github.com/knolleary/pubsubclient.git
-	https://github.com/anklimov/Artnet.git
-	FastLED@3.3.2
-	SD
-	SdFat
-	Adafruit Unified Sensor
-	DHT sensor library
-	https://github.com/arcao/Syslog.git
-	Streaming
-	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
-	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA
-	Adafruit MCP23017 Arduino Library
-	Adafruit BusIO
-	br3ttb/PID@^1.2.1
-	ArduinoMDNS
-	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
-monitor_speed = 115200
 
 [env:due]
 ;Experimental target with universal Ethernet Library
@@ -425,8 +371,8 @@ board_build.f_cpu = 16000000L
 ;build_unflags = -flto -  not working without LTO!
 
 ;upload_protocol = arduino
-upload_command = arduinoOTA -address 192.168.11.213 -port 65280 -username arduino -password password -b -upload /sketch -sketch $BUILD_DIR/${PROGNAME}.bin;sleep 5
-upload_protocol = custom
+;upload_command = arduinoOTA -address 192.168.11.213 -port 65280 -username arduino -password password -b -upload /sketch -sketch $BUILD_DIR/${PROGNAME}.bin;sleep 5
+;upload_protocol = custom
 
 board_upload.speed = ${env:fuses_bootloader.board_bootloader.speed}
 framework = arduino
@@ -646,60 +592,6 @@ lib_deps =
 
 monitor_speed = 115200
 
-[env:due-5500]
-platform = atmelsam
-framework = arduino
-board = due
-build_flags = !python get_build_flags.py due-5500
-lib_ignore = 
-    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
-	DHT sensor library for ESPx
-	ESPDMX
-	ESP-Dmx
-	DMXSerial
-	WifiManager
-	DmxSimple
-	httpClient
-	Ethernet
-	Ethernet3
-	Ethernet5100
-	NRFFlashStorage
-	WebServer
-	UIPEthernet
-	ESP_EEPROM
-	EEPROM
-	M5Stack
-lib_deps = 
-	https://github.com/sebnil/DueFlashStorage
-	https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-	https://github.com/anklimov/DS2482_OneWire
-	https://github.com/anklimov/DmxDue
-	ArduinoHttpClient
-	https://github.com/anklimov/aJson
-	https://github.com/anklimov/CmdArduino
-	https://github.com/anklimov/ModbusMaster
-	https://github.com/anklimov/Ethernet2
-	https://github.com/knolleary/pubsubclient.git
-	https://github.com/anklimov/Artnet.git
-	FastLED@3.3.2
-	SD
-	SdFat
-	Adafruit Unified Sensor
-	DHT sensor library
-	https://github.com/arcao/Syslog.git
-	Streaming
-	https://github.com/livello/PrintEx#is-select-redecl
-	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
-	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA
-	Adafruit MCP23017 Arduino Library
-	Adafruit BusIO
-	br3ttb/PID@^1.2.1
-	ArduinoMDNS
-	https://github.com/khoih-prog/TimerInterrupt_Generic.git
-
-monitor_speed = 115200
 
 [env:lighthub21]
 platform = atmelsam
@@ -707,9 +599,9 @@ framework = arduino
 board = due
 monitor_baud = 115200
 build_flags = !python get_build_flags.py lighthub21
-;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
+upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
 ;upload_command = arduinoOTA -address 192.168.88.45 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 6
-;upload_protocol = custom
+upload_protocol = custom
 lib_ignore = 
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
@@ -857,6 +749,66 @@ lib_deps =
 	https://github.com/knolleary/pubsubclient.git
 	Streaming
 	UIPEthernet
+	https://github.com/anklimov/NRFFlashStorage
+	Adafruit NeoPixel
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
+	SPI
+	br3ttb/PID@^1.2.1
+	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
+monitor_speed = 115200
+
+
+[env:stm32]
+platform = ststm32
+board = olimexino
+board_build.mcu = stm32f103rbt6
+board_build.f_cpu = 72000000L
+framework = arduino
+monitor_baud = 115200
+upload_protocol = dfu
+;debug_tool = cmsis-dap
+build_flags = !python get_build_flags.py stm32
+lib_ignore = 
+   ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
+	DHT sensor library for ESPx
+	DmxDue
+	DueFlashStorage
+	ESPDMX
+	ESP-Dmx
+	WifiManager
+	FastLED
+	UIPEthernet
+	DMXSerial
+	DmxSimple
+	httpClient
+	SD
+	PrintEx
+	Ethernet2
+	Artnet
+	Ethernet3
+	WebServer
+	ESP_EEPROM
+	DHT sensor library
+	DallasTemperature
+	Adafruit Unified Sensor
+	DS2482_OneWire
+	ModbusMaster
+	Syslog
+	EEPROM
+	ClosedCube HDC1080
+	SparkFun CCS811 Arduino Library
+	M5Stack
+	ArduinoOTA
+lib_deps = 
+	https://github.com/anklimov/aJson
+	https://github.com/anklimov/CmdArduino
+	ArduinoHttpClient
+	https://github.com/knolleary/pubsubclient.git
+	Streaming
+	Ethernet
 	https://github.com/anklimov/NRFFlashStorage
 	Adafruit NeoPixel
 	Adafruit MCP23017 Arduino Library
