pre-release, save2flash, mdns bugs, dmx, .....

--- a/platformio.ini
+++ b/platformio.ini
@@ -599,9 +599,9 @@ framework = arduino
 board = due
 monitor_baud = 115200
 build_flags = !python get_build_flags.py lighthub21
-upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
+;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
 ;upload_command = arduinoOTA -address 192.168.88.45 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 6
-upload_protocol = custom
+;upload_protocol = custom
 lib_ignore = 
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
@@ -768,6 +768,7 @@ board_build.mcu = stm32f103rbt6
 board_build.f_cpu = 72000000L
 framework = arduino
 monitor_baud = 115200
+monitor_dtr = 1
 upload_protocol = dfu
 ;debug_tool = cmsis-dap
 build_flags = !python get_build_flags.py stm32
