more persitance all MPU, RESTORE bug fixed

--- a/platformio.ini
+++ b/platformio.ini
@@ -116,6 +116,7 @@ lib_deps =
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
 	TimerInterrupt_Generic
+	d00616/arduino-NVM @ ^0.9.1
 
 monitor_speed = 115200
 
@@ -138,7 +139,8 @@ lib_ignore =
 	Ethernet2
 	Ethernet3
 	Ethernet5100
-	EEPROM
+	ESP_EEPROM
+	;EEPROM
 	Artnet
 	UIPEthernet
 	ESP_EEPROM
@@ -204,7 +206,8 @@ lib_ignore =
 	Ethernet2
 	Ethernet3
 	Ethernet5100
-	EEPROM
+	;EEPROM
+	ESP_EEPROM
 	UIPEthernet
 	ESP_EEPROM
 	httpClient
@@ -219,7 +222,7 @@ lib_deps =
 	https://github.com/anklimov/CmdArduino
 	https://github.com/knolleary/pubsubclient.git
 	Streaming
-    ;ESP_EEPROM
+    ;EEPROM
 	;https://github.com/anklimov/NRFFlashStorage
 	Adafruit Unified Sensor
 	DHT sensor library for ESPx
@@ -371,8 +374,8 @@ board_build.f_cpu = 16000000L
 ;build_unflags = -flto -  not working without LTO!
 
 ;upload_protocol = arduino
-;upload_command = arduinoOTA -address 192.168.11.213 -port 65280 -username arduino -password password -b -upload /sketch -sketch $BUILD_DIR/${PROGNAME}.bin;sleep 5
-;upload_protocol = custom
+upload_command = arduinoOTA -address 192.168.11.213 -port 65280 -username arduino -password password -b -upload /sketch -sketch $BUILD_DIR/${PROGNAME}.bin;sleep 5
+upload_protocol = custom
 
 board_upload.speed = ${env:fuses_bootloader.board_bootloader.speed}
 framework = arduino
@@ -599,9 +602,9 @@ framework = arduino
 board = due
 monitor_baud = 115200
 build_flags = !python get_build_flags.py lighthub21
-;upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
+upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
 ;upload_command = arduinoOTA -address 192.168.88.45 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 6
-;upload_protocol = custom
+upload_protocol = custom
 lib_ignore = 
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
